# RULA-Based-Postural-Assessment-XSens-Data-

./: README.md
src/rula/: CMakeLists.txt  joints_model.ttt  package.xml
src/rula/include/rula/: data_files.h  data_movement.h  ros_communication.h  rula.h
src/rula/src/: data_files.cpp  data_movement.cpp  main.cpp  ros_communication.cpp  rula.cpp
src/rula/txt_files/: Sample.txt
